Refactor OSM file reading: replace OsmFileReader with OsmXmlFileReader and add support for PBF files
Signed-off-by: Hong Nguyen <ahongnt.uct@gmail.com>